finally somehow fixed the alignment of review-box

--- a/style.css
+++ b/style.css
@@ -79,22 +79,30 @@ body{
     margin-bottom: 10px;
     padding: 20px;
     border-radius: 15px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     
 }
 .review-box h1{
-     font-size: 30px;
+    font-size: 30px;
     margin-bottom: 30px;
-    display: flex;
+
 }
-.review-box img{
-    width: 300px;
-    height: auto;
-    border-radius: 20px;
-    
+.review-box div{
+    margin-right: 50px;
+    padding: 10px;
 }
+
 .review-box p{
     font-size: 20px;
     font-weight: bold;
     margin-bottom: 10px;
     text-align: justify;
+}
+.review-box img{
+    width: 300px;
+    height: auto;
+    border-radius: 20px;
+
 }
